fix: Title overlap issue & date format

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -69,7 +69,7 @@ section.summary *{
 }
 
 .event-card > span h1{
-    line-height: 0;
+    line-height: 1!important;
 }
 
 .event-card > span > span{
